   "getopt" function from this module is similar to C function getopt(3)
   (Idiotic GNU getopt must die!)

   Better heuristics for adding `-' to the list awk's arguments,
   now it better conforms to "Utility Syntax Guidelines".

   Makefile: STDIN_FILENAME defaults to `-', not `/dev/stdin'
   Interix has no /dev/stdin file

   Makefile: WARNS?= 4

   Lots of regression tests for 'getopt' function

======================================================================
Version 0.14.3, by Aleksey Cheusov, Sat, 18 Oct 2008 19:39:47 +0300

   The following code no longer fails with NAWK under NetBSD
          runawk -e ' { print "123" } ' /dev/null

   fixed: compilation bug under FreeBSD (WARNS=4 -> warning -> error)
   caused by comparison of signed and unsigned values

   More verbose output when stat(filename) failed

   modules/str2regexp.awk: adapted to buggy MAWK

======================================================================
Version 0.14.2, by Aleksey Cheusov, Fri, 29 Aug 2008 17:28:34 +0300

   Temporary file is removed if runawk is killed by
   SIGINT, SIGQUIT, SIGTERM, SIGHUP or SIGPIPE signals.
   (Temporary file is created by 'runawk -e ...')

======================================================================
Version 0.14.1, by Aleksey Cheusov, Sat, 19 Jul 2008 22:53:45 +0300

    FIXED: The following code doesn't work with runawk-0.14.0
        runawk -e '
        #use "anymodule.awk"

        <ANY_CODE_HERE>
        '

        This code requires a creation of the temporary file that was
        removed in runawk-0.14.0. Now temporary file is created using
        mkstemp(3).

        Regression tests are created for testing.

======================================================================
Version 0.14.0, by Aleksey Cheusov, Sat, 12 Jul 2008 17:29:22 +0300

    Temporary file is not needed anymore for -e option.

    FIXED: #env didn't work under Linux/glibc.

    FIXED: compilation error under FreeBSD.
