@@ -32,10 +32,10 @@ MODULES!=		echo ${SRCROOT}/modules/*.awk
 FILES=			${MODULES}
 FILESDIR=		${MODULESDIR}
 
-CPPFLAGS+=		-DAWK_PROG='"${AWK_PROG}"'
-CPPFLAGS+=		-DSTDIN_FILENAME='"${STDIN_FILENAME}"'
-CPPFLAGS+=		-DMODULESDIR='"${MODULESDIR}"'
-CPPFLAGS+=		-DRUNAWK_VERSION='"${VERSION}"'
+CFLAGS+=		-DAWK_PROG='"${AWK_PROG}"'
+CFLAGS+=		-DSTDIN_FILENAME='"${STDIN_FILENAME}"'
+CFLAGS+=		-DMODULESDIR='"${MODULESDIR}"'
+CFLAGS+=		-DRUNAWK_VERSION='"${VERSION}"'
 
 runawk.1 : runawk.pod
 	$(POD2MAN) -s 1 -r 'AWK Wrapper' -n runawk \
